# iPic3D

./: .gitignore  BeamParsek3D.cpp  Beam_iPIC3D.cpp  CMakeLists.txt  Doxyfile  Makefile  Parsek3D.cpp  README  README.md  TODO.txt  convHDF5.cpp  iPIC3D.cpp  iPic3D.cpp  iPic3D.cpp.ECSIM  iPic3D_fields.cpp  indent.sh  makefile  script.HPCtoolkit  script.Test  tags  unsigned_long
BasicVisuScripts/: proc2vtr_iPic3D-mlmd_G0.py  proc2vtr_iPic3D-mlmd_G1.py  proc2vtr_iPic3D-mlmd_G2.py  proc2vtr_iPic3D-mlmd_G3.py
ConfigFile/src/: ConfigFile.cpp  ConfigFile.h  Makefile  input_array.h
Documentation/: CodeUnit2PhysicsUnits.txt  output.txt  python.txt  readme.txt  units.txt
EBox/: EBox.cpp  EBox.cpp~
H5hut-io/: CMakeLists.txt  Makefile
H5hut-io/include/: H5hut-io.h
H5hut-io/src/: H5hut-io.cpp
MonteCarloWrapper/: #Constant.f90#  #OneStep.F90#  ArGas.f90  Constant.f90  Electron.f90  Gas.f90  IonMCC.f90  MCCPublic.f90  Mcc.f90  MonteCarlo.cpp  MonteCarlo.cpp~  OneStep.f90  Particle.f90
PSKOutput3D/: Makefile  PSKException.h  PSKOutput.h  PSKhdf5adaptor.cpp  PSKhdf5adaptor.h  agent.hdf  test_pskoutput.cc  testhdf5.cc
VISU/: proc2vtr_iPic3D-mlmd_G0.py3  proc2vtr_iPic3D-mlmd_REC.py  scriptVisuREC
VisuMC/: proc2vtr_extraVar_AI.py  proc2vtr_extraVar_ParInY.py
bc/: BcFields3D.cpp  BcFields3D.h  BcInterp.h  BcParticles.cpp  BcParticles.h
cmake/: cmake_template.cmake.Xeon  cmake_template.cmake.XeonPhi
cmake-modules/: FindPETSc.cmake
communication/: ComBasic3D.cpp  ComBasic3D.h  ComInterpNodes3D.cpp  ComInterpNodes3D.h  ComNodes3D.cpp  ComNodes3D.h  ComParser3D.cpp  ComParser3D.h  ComParticles3D.cpp  ComParticles3D.h  VCtopology3D.cpp
data/: convHDF5  convHDF5_EPAR
fields/: BCStructure.cpp  BCStructure.h  EMfields3D-Mercury.cpp  EMfields3D.cpp  EMfields3D.h  ESfield.h  Field.h  Moments.cpp  Moments.h
grids/: Grid.h  Grid3DCU.cpp  Grid3DCU.h
include/: .Particles3Dcomm.h.swp  Alloc.h  BCStructure.h  Basic.h  BcFields3D.h  BcParticles.h  Bessel.h  CG.h  Collective.h  CollectiveIO.h  ComBasic3D.h  ComInterpNodes3D.h  ComNodes3D.h  ComParser3D.h  ComParticles3D.h  ConfigFile.h  EBox.h  EMfields3D.h  EllipticF.h  Field.h  GMRES.h  Grid.h  Grid3DCU.h  InterfaceFluid.h  MPIdata.h  Moments.h  MonteCarlo.h  MyClock.h  OutputChunks.h  PSKException.h  PSKOutput.h  PSKhdf5adaptor.h  ParallelIO.h  Parameters.h  Particle.h  Particles.h  Particles3D.h  Particles3Dcomm.h  PetscSolver.h  PhyConstants.h  (+24 more)
inputfiles/: 2coilp_ap_cusp19.inp  2coilp_ap_cusp_inj.inp  2coilp_ap_cuspi3.inp  2coilp_ap_cuspi4.inp  2coilp_ap_cuspi5.inp  2coilp_ap_cuspi6.inp  6coilp_ap.inp  6coilp_ap_cusp6.inp  6coilp_ap_cusp8.inp  6coilp_ap_new.inp  6coilp_ap_new_cusp7.inp  DH.inp  DoubleHarrisRel_ionel.inp  DoubleHarrisRel_pairs.inp  FluxRope.inp  GEM-Birn.inp  GEM-smallpert.inp  GEM.inp  GEM_forCoils.inp  HarrisSteps.inp  InputExample.inp  InputFileTest.inp  Inputfile_MonoWhistler.inp  KAWTurbulencePert.inp  KAWTurbulencePertSymm.inp  LHDI_edison_F_PT.inp  MLMD_input.inp  MRX_NoColl_OI.inp  Random.inp  TRED70ep.inp  TRED70eprel.inp  Test16Cores.inp  WHISTLER_noi.inp  beam.inp  filamentation-relativistic.inp  forcefree.256lr  homa.inp  inputfile  inputfile.1836  inputfile.1836-hr  (+31 more)
inputfilesTEST/: LHDI_3D_TEST.inp  LightWave_DifferentNC.inp  MAX_ElScales_DP.inp  Max3D_1.inp  NewInputFile.inp  Test_DifferentNC.inp
inputoutput/: Collective.cpp  Collective.h  CollectiveIO.h  OutputChunks.cpp  ParallelIO.cpp  Restart3D.cpp  Restart3D.h  SerialIO.h  WriteOutputH5hut.cpp  WriteOutputParallel.cpp  phdf5.cpp
kvf/src/: KVFparser.h  KVFyacc.c  KVFyacc.h  Makefile  kvfDataBuffer.h  kvfDataSource.h  kvfException.h  kvfNaming.h  kvfVar.h  libkvf.a.old
kvf/tests/: Makefile  (+1 more)
main/: CMakeLists.txt  Parameters.cpp  iPic3Dlib.cpp
makefiles/: makefile.Curie  makefile.apple  makefile.fra  makefile.ubuntu
mathlib/: Basic.h  Bessel.h  DirDer.h  EllipticF.cpp  EllipticF.h  PolyRoots.cpp
matlab/: GEMparams.m  instructions.txt  parsek3D.m  parsek3Dubuntu.m  parsek3Dvic.m  periodicHarris.m  read_parsek_settings3D.m
mpidata/: MPIdata.h
particles/: Particles.h  Particles3D copy.cpp  Particles3D.cpp  Particles3D.h  Particles3D.moverNOTvectorized.cpp  Particles3D.original.cpp  Particles3D_improved.cpp  Particles3D_original.cpp  Particles3Dcomm copy.cpp  Particles3Dcomm copy.h  Particles3Dcomm.cpp  Particles3Dcomm.h
performances/: Timing.cpp  Timing.h
preprocessing_tools/h5hut-test/: CMakeLists.txt  H5hut-io
preprocessing_tools/h5hut-test/include/: Fields.h
preprocessing_tools/h5hut-test/src/: h5hut-test.cpp
processtopology/: VCtopology3D.h  VCtopology3Dparticles.h  VirtualTopology3D.h
python/: proc2vtr.py  proc2vtr_serial.py  read_proc_para.py  read_proc_spec.py
scripts/: compareconserved  ipic  ipic-ctags  ipic-help  ipic-help-ctags  ipic-help-mic  ipic.py  makefiletags  tags  twostream_classic.py
solvers/: CG.cpp  CG.h  GMRES.cpp  GMRES.h  GMRES_ECSIM.cpp  GMRES_FACE.cpp  PetscSolver.cpp
testfiles/: CMakeRunTest-GEM.txt  CMakeRunTest-uname.txt  ConservedQuantities.txt-GEM
tests/: Makefile  stopwatch.h  test_arrays.cpp
unused/: BCStructure.cpp  Beam_iPIC3D.cpp  DirDer.h  ESfield.h  Parsek3D.cpp  makefile
utility/: Alloc.h  Basic.cpp  MPIdata.cpp  TimeTasks.cpp  TimeTasks.h  TransArraySpace3D.h  asserts.cpp  asserts.h  debug.cpp  debug.h  defs.h  diagnostics.cpp  diagnostics.h  errors.cpp  omp.h  ompdefs.h
visu/: convertFromPythonRead.m
vtk3D/: convHDF5.cpp  convHDF5_EPAR.cpp  convbgHDF5_EPAR  convbgHDF5_J  makefile.conv
vtk3Dnew/: .cproject  .project  ASCIIStuff.h  AVGxyHDF5.cpp  AVGxyPHDF5.cpp  AVGxzHDF5.cpp  AVGxzPHDF5.cpp  Alloc.h  Basic.h  GdaStuff.h  Manipulator.h  Particles.h  VtkStuff.h  convHDF5.cpp  convHDF5_EPAR.cpp  convHDF5unico.cpp  cut_xzHDF5.cpp  energy_fluxes.cpp  makefile  partHDF5.cpp  presHDF5.cpp  read_ASCII.cpp  read_vtk.cpp  reconHDF5.cpp  timeplot.h  xtGDA.cpp  xtHDF5.cpp  xyzGDA.cpp  xyzGDA_par.cpp  xyzGDAold.cpp  xyzHDF5.cpp  xyzHDF5_3sp.cpp  xyzHDF5_4sp.cpp  xyzHDF5_back.cpp  xyzHDF5_circshift.cpp  xyzHDF5_par.cpp  xyzHDF5_species.cpp  ytHDF5.cpp  zenitani.cpp
(+514 files in other folders)
